--- a/.github/labels.yml
+++ b/.github/labels.yml
@@ -1,34 +1,34 @@
 ---
 - name: "priority: critical"
-  color: "#d50000"
+  color: "d50000"
   description: "Showstopper issue that must be addressed as soon as possible."
 - name: "priority: high"
-  color: "#ffab00"
+  color: "ffab00"
   description: "Must have issues that should be addressed after all critical issues have been addressed."
 - name: "priority: normal"
-  color: "#ffd600"
+  color: "ffd600"
   description: "Should have issues that can be useful and deserves attention."
 - name: "priority: low"
-  color: "#00c853"
+  color: "00c853"
   description: "Nice to have issues that can be addressed eventually."
 - name: "priority: triage"
-  color: "#e0e0e0"
+  color: "e0e0e0"
   description: "An issue that still needs its priority decided by a codeowner."
 
 - name: "status: completed"
-  color: "#fbca04"
+  color: "fbca04"
   description: "An issues that has been completed"
 - name: "status: in-review"
-  color: "#fbca04"
+  color: "fbca04"
   description: "An issues whose changes are currently under review."
 - name: "status: in-progress"
-  color: "#fbca04"
+  color: "fbca04"
   description: "An issue that is currently being worked on by a developer."
 - name: "status: to-do"
-  color: "#fbca04"
+  color: "fbca04"
 - name: "status: stale"
-  color: "#fef2c0"
+  color: "fef2c0"
   description: "An issue that has had no activity for quite some time."
 - name: "status: no-stale"
-  color: "#fef2c0"
+  color: "fef2c0"
   description: "This issue is exempt from automatically being marked as stale."
